--- a/_posts/news/2018-10-19-angular_7.md
+++ b/_posts/news/2018-10-19-angular_7.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Angular 7."
-date: 2018-10-19
+date: 2018-10-20
 tags: [angular]
 categories: news
 author: carlosrojas
@@ -25,13 +25,9 @@ No. Si has estado trabajando con Angular frecuentemente has notado que las versi
 
 ## Si cambia cada 6 meses el codigo de mi empresa va a quedar sin Soporte ?
 
-El equipo de Angular tiene ciertas versiones las cuales cuentan con LTS (Long Term Support) el cual puedes encontrar [acá](https://github.com/angular/angular/blob/master/docs/RELEASE_SCHEDULE.md#long-term-supported-lts-versions) y la versión 6 resulta ser una versión LTS.
+Todas las versiones mayores de Angular tienen LTS (Long Term Support).
 
-*Update* Todas las versiones mayores tienen LTS :)
-
-## Novedades en la versión 6.
-
-En esta versión se estan sincronizando las versiones mayores de todos los paquetes que hacen parte de la plataforma. (`@angular/core`,   `@angular/common`, `@angular/compiler`, etc), el Angular CLI, Angular Material + CDK. Todo esta saliendo con la versión 6.
+## Novedades en la versión 7.
 
 La versión 7 de Angular tiene pequeños parches y varias mejoras, estas son:
 
@@ -45,36 +41,76 @@ La versión 7 de Angular tiene pequeños parches y varias mejoras, estas son:
 
 * Angular elements.
 
-## Motor de Renderizado.
+## CLI Prompts.
 
-ngIvy es el nombre en codigo de esta version del motor de renderizado. Pero que es el motor de renderizado?
+Ahora cuando usas `schematics` y sobre todo cuando creas tus propios paquetes, puedes mostrarle a los usuarios mensajes con el atributo `x-prompt` que ayudaran a tus usuarios a descubrir en tareas comunes como `ng-new` caracteristicas como `routing`. Un ejemplo seria:
 
-Si piensas un poco en la arquitectura de Angular podemos dividir todo en dos cosas. Los elementos que componen la logica del negocio y la UI. El motor de renderizado es el que se encarga que la UI sea una realidad en nuestra App. Adicionalmente, el proceso de renderizado tiene principalmente dos fases la compilacion y la ejecución.
+```json
+"routing": {
+  "type": "boolean",
+  "description": "Generates a routing module.",
+  "default": false,
+  "x-prompt": "Would you like to add Angular routing?"
+},
+```
 
-Podemos pensar en la compilación como el proceso en que nuestro codigo se organiza y se prepara para ser enviado al Navegador. ngIvy promete hacer la compilación dramaticamente mas rapida, lo que se traduce en un mejor proceso en el momento de desarrollo.
+## Mejoras en el rendimiento.
 
-Podemos pensar en la ejecución como el proceso en que el Navegador procesa nuestra App en el DOM y actualiza sus estados. ngIvy tiene ahora un nuevo Proceso que codigo que no es necesario no se envie al Navegador traducido en componentes mas livianos (en kb) que van a estar preparados más rapido para el Navegador.
+Se ha removido el `reflect-metadata` polyfill en `producción` el cual es solamente necesario en `desarrollo`.
 
-Otra mejora en la ejecución es la participación de Angular Elements en esto, pero hablaremos de esto luego.
+Adicionalmente, se ha colocado mensajes de alerta cuando el build de una distro supere los `2M` y un error cuando supere los `5M`. Se puede cambiar esto desde el `angular.json`
 
-La versión de Angular 6.0.0 va a venir aun con renderer2 (El actual motor de renderizado) lo que hara que puedas seguir utilizandolo mientras te vas preparando para el renderer3 ( El que deberia ser ngIvy).
+```json
+"budgets": [{
+  "type": "initial",
+  "maximumWarning": "2mb",
+  "maximumError": "5mb"
+}]
+```
 
-## Formato de Paquetes de Angular.
+## Angular Material y el CDK.
 
-El Angular Package Format es una colección de buenas practicas y formas de organizar y construir tus librerias o codigo que puedes reusar con el foco de que pueda ser utilizado facilmente por los componentes de Angular y las herramientas de trabajo. 
+Adicionalmente a pequeños cambios en los aspectos graficos se han agregado dos cosas importantes que podran ser utilizados el `Virtual Scrolling` y el `Drag and Drop`
 
-Puedes ver estas practicas [acá](https://docs.google.com/document/d/1CZC2rcpxffTDfRDs6p1cfbmKNLA6x5O-NtkJglDaBVs/preview).
+<amp-img width="680" height="449" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-10-19-angular_7%2Fvirtualscrolling.gif?alt=media&token=1f0beca0-0043-442a-a5c3-892afa783c7a"></amp-img>
 
-## MVP de Angular Elements.
+Con el `Virtual Scrolling` mostrar y ocultar elementos en el DOM cuando esta visible hace que tu app sea mucho mas rapido y la experiencia del usuario mas fluida.
 
-Y por ultimo la caracteristica que más me emociona  es la versión minima de Angular Elements. Para entender esto debes pensar en cuando desarrollas tus Apps lo que haces es basicamente crear Componentes de Angular, los cuales magicamente se renderizan y funcionan en el navegador. El problema con esto es que es magia solo en el universo de Angular, entonces, si lo quieres mezclar con otras tecnologias no es posible.
+```html
+<cdk-virtual-scroll-viewport itemSize="50" class="example-viewport">
+  <div *cdkVirtualFor="let item of items" class="example-item">{{item}}</div>
+</cdk-virtual-scroll-viewport>
+```
 
-Ahora con Angular Elements, Angular buscara convertir los componentes que quieras en componentes nativos para el Navegador o mas especificamente [Custom Elements](https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_custom_elements) y de esta manera van a ser piezas independientes que puedas utilizar con otras tecnologias. Puedes explorar más sobre Angular Elements [Aquí](https://angular.io/guide/elements)
+<amp-img width="640" height="314" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-10-19-angular_7%2Fdraganddrop.gif?alt=media&token=2ec421f3-1706-4538-a4af-cf6fc6b25063"></amp-img>
 
-## Mejoras de rendimiento para las animaciones.
+Con el `Drag And Drop` ahora incluido en el `CDK` es mucho mas facil manipular elemento cuando un usuario reordene elementos o mueva elementos.
 
-El paquete de Animations no necesita más el polyfill de Animation como dependencia. Es decir te puedes ahorrar 47KB de tu bundle mientras incrementas el rendimiento en las animaciones en Safari al mismo tiempo.
+```html
+<div cdkDropList class="list" (cdkDropListDropped)="drop($event)">
+  <div class="box" *ngFor="let movie of movies" cdkDrag>{{movie}}</div>
+</div>
+```
 
+```ts
+  drop(event: CdkDragDrop<string[]>) {
+    moveItemInArray(this.movies, event.previousIndex, event.currentIndex);
+  }
+```
+
+## Mejoras en la accesibilidad de Selects.
+
+Ahora `mat-form-field` va a utilizar los `selects` nativos en lugar de los `mat-selects` para mejorar el rendimiento y la accesibilidad.
+
+## Mejoras en Angular Elements.
+
+Angular Elements ahoran soportan `content projection` usando Web Standards para los Custom Elements.
+
+```html
+<my-custom-element>This content can be projected!</my-custom-element>
+```
+
+Ver mas de [Content Projection](https://codecraft.tv/courses/angular/components/content-projection/)
 
 
 Bueno espero que sea de ayuda y no te olvides comentar y compartir :)
