WIP: Nuevos Posts

--- a/_posts/ionic2/2017-04-18-auth0-ionic.md
+++ b/_posts/ionic2/2017-04-18-auth0-ionic.md
@@ -8,7 +8,7 @@ categories: ionic2
 author: carlosrojas
 cover: "https://auth0.com/modules/twittercard/1x-new.png"
 remember: true
-repo: "https://stackblitz.com/github/ng-classroom/auth0demo"
+repo: "https://github.com/ng-classroom/auth0demo"
 draft: true
 versions:
   - title: 'ionic'
