--- a/_posts/vue/2018-12-18-intro-vue.md
+++ b/_posts/vue/2018-12-18-intro-vue.md
@@ -3,7 +3,7 @@ layout: post
 title: "Introducción a Vue"
 date: 2018-10-18
 repo: "https://github.com/vue-classroom/demo1"
-categories: vuejs
+categories: vue
 author: carlosrojas
 tags: [vuejs]
 cover: "https://firebasestorage.googleapis.com/v0/b/vueclassroom.appspot.com/o/2018-12-18-intro-vue%2Fcover.png?alt=media&token=aea93606-ffd1-46d8-b9c3-4ef2047bba7d"
