--- a/_posts/javascript/2020-02-29-intro-es6.md
+++ b/_posts/javascript/2020-02-29-intro-es6.md
@@ -2,9 +2,9 @@
 layout: post
 title: "Intro a EcmaScript 6"
 date: 2020-02-29
-categories: ecmascript
+categories: javascript
 author: carlosrojas
-tags: [ecmascript]
+tags: [ecmascript, js]
 cover: "https://firebasestorage.googleapis.com/v0/b/vueclassroom.appspot.com/o/2018-12-27-intro-es6%2Fecmascript.png?alt=media&token=335db467-ce9e-4e06-9a2d-fc86a785df0b"
 editname: 'javascript/2020-02-29-intro-es6.md'
 versions:
